[CI][RESUME]igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
Submitted by LAKSHMINARAYANA VUDUM @l4kshmi
Assigned to Intel GFX Bugs mailing list
Link to original bug (#112295)
Description
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7325/re-tgl-y/igt@kms_psr2_su@page_flip.html
Starting subtest: page_flip
(kms_psr2_su:985) CRITICAL: Test assertion failure function run, file ../tests/kms_psr2_su.c:211:
(kms_psr2_su:985) CRITICAL: Failed assertion: result
(kms_psr2_su:985) CRITICAL: No matching selective update blocks read from debugfs
Subtest page_flip failed.
This doesn't have AUO panel, this machine has got SHARP LQ133D1JW33B.
I assume this is not a duplicate of Bug 111842.
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Bugzilla Migration User added CI feature: display/PSR platform: TGL + 1 deleted label
added CI feature: display/PSR platform: TGL + 1 deleted label
LAKSHMINARAYANA VUDUM@l4kshmi
said:(In reply to Lakshmi from comment 0)
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7325/re-tgl-y/
igt@kms_psr2_su@page_flip.html
Starting subtest: page_flip
(kms_psr2_su:985) CRITICAL: Test assertion failure function run, file
../tests/kms_psr2_su.c:211:
(kms_psr2_su:985) CRITICAL: Failed assertion: result
(kms_psr2_su:985) CRITICAL: No matching selective update blocks read from
debugfs
Subtest page_flip failed.
This doesn't have AUO panel, this machine has got SHARP LQ133D1JW33B.
I assume this is not a duplicate of Bug 111842.
CC'ing Jose. CI Bug Log said:The CI Bug Log issue associated to this bug has been updated.
New filters associated
* TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7325/re-tgl-y/igt@kms_psr2_su@page_flip.html- Reporter
A CI Bug Log filter associated to this bug has been updated:
TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs ICL TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
New failures caught by the filter:
- LAKSHMINARAYANA VUDUM added platform: ICL label
added platform: ICL label
- José Roberto de Souza assigned to @zehortigoza
assigned to @zehortigoza
- Developer
I'm not able to reproduce this locally and CI is not reproducing this for more than 6 days. Would be nice to have this merged when/if this happens again https://patchwork.freedesktop.org/series/72493/ Can someone help with review?
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: GEN9 ICL TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1"] OR machine_tag IS IN ["ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_psr2_su@frontbuffer", "igt@kms_psr2_su@page_flip"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: result\n.*No matching selective update blocks read from debugfs'
New failures caught by the filter:
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_463/fi-cml-u2/igt@kms_psr2_su@page_flip.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_464/fi-cml-u2/igt@kms_psr2_su@page_flip.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_461/fi-cml-u2/igt@kms_psr2_su@page_flip.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_462/fi-cml-u2/igt@kms_psr2_su@page_flip.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_460/fi-cml-u2/igt@kms_psr2_su@page_flip.html
- Developer
- LAKSHMINARAYANA VUDUM added platform: JSL label
added platform: JSL label
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: GEN9 ICL JSL TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "re-jsl-1", "re-jsl-2"] OR machine_tag IS IN ["JSL", "ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_psr2_su@frontbuffer", "igt@kms_psr2_su@page_flip"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: result\n.*No matching selective update blocks read from debugfs'
New failures caught by the filter:
- Developer
- José Roberto de Souza closed via commit igt-gpu-tools@82ef7157
closed via commit igt-gpu-tools@82ef7157
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: GEN9 ICL JSL TGL: igt@kms_psr2_su@page_flip - fail - Failed assertion: result, No matching selective update blocks read from debugfs
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-skl-6260u", "shard-apl2", "shard-kbl5", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "fi-glk-dsi", "fi-kbl-7500u", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-icl-u", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "fi-icl-u2", "shard-skl10", "fi-apl-guc", "shard-iclb", "shard-iclb1", "shard-iclb2", "shard-iclb3", "shard-iclb4", "shard-iclb5", "shard-iclb6", "fi-icl-u3", "shard-iclb7", "fi-icl-y", "fi-skl-lmem", "shard-iclb8", "fi-icl-guc", "fi-icl-dsi", "re-icl-u", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-icl-u4", "fi-tgl-u", "fi-cml-h", "fi-cml-s", "re-tgl-u", "fi-tgl-u2", "shard-tglb1", "shard-tglb2", "shard-tglb3", "shard-tglb4", "shard-tglb5", "shard-tglb6", "re-tgl1-display", "re-tgl2-display", "shard-tglb7", "shard-tglb8", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "shard-tglb0", "fi-tgl-y", "re-tgl-y", "shard-tglb9", "re-tgl-cham", "fi-icl-1065g7", "fi-tgl-guc", "re-tgl-u2", "fi-tgl-dsi", "ba-tgl-1", "custom-tgl-joshikun", "re-jsl-1", "re-jsl-2", "pig-icl-1065g7", "tgl-u-lpddr-ba", "re-tgl-u3"] OR machine_tag IS IN ["JSL", "ICL", "TGL", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_psr2_su@frontbuffer", "igt@kms_psr2_su@page_flip"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: result\n.*No matching selective update blocks read from debugfs'
New failures caught by the filter:
- Developer
Can't check for sure what IGT the ran above used(as we can't access https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8539/ probably due how HTTP Server is confitured) but after a IGT_5691 this test is passing again.
https://intel-gfx-ci.01.org/tree/drm-tip/shards-all.html?testfilter=psr2
- Reporter
The CI Bug Log issue associated to this bug has been archived.
New failures matching the above filters will not be associated to this bug anymore.